# TwoTimePadCracking

./: .gitignore  CMakeLists.txt  CMakeListsWithTests.txt  README.md  ToDo.md  pytest.ini  requirements.txt
config/: config.yml
data/testing/email/: sample_email_001.txt
data/testing/html/: sample_html_001.html
data/testing/plaintext/: sample_plaintext_001.txt
data/testing/word/: sample_word_001.doc
include/: config_manager.h  language_model.h  visualizer.h  viterbi_visualizer.h
kernels/: viterbi_kernel.cl
results/10k_analysis_results/: analysis_results_20251202_075902.json  analysis_results_20251202_075902.pkl  analysis_summary_20251202_075902.txt
results/1k_analysis_results/: analysis_results_20251201_213146.json  analysis_results_20251201_213146.pkl  analysis_summary_20251201_213146.txt
results/5k_analysis_results/: analysis_results_20251202_124635.json  analysis_results_20251202_124635.pkl  analysis_summary_20251202_124635.txt
src/: __init__.py  analysis.py  char_language_model.py  config_manager.cpp  decoder.py  decryptor.cpp  decryptor.h  evaluate.py  gpu_accelerator.cpp  gpu_accelerator.h  language_model.cpp  logger.cpp  logger.h  main.cpp  main.py  mapped_model.py  model_analyzer.cpp  model_analyzer.h  setup.py  setup_training.py  visualizer.cpp  viterbi_search.cpp  viterbi_search.h  viterbi_visualizer.cpp
src/data/: __init__.py  _unsused_books.py  data_loader.py  download_html_corpus.py  email_utils.py  enron.py  html_corpus.py  loader.py  preprocess.py  preprocessing.py  utils.py
src/model/: __init__.py  char_language_model.py  decoder.py  evaluate.py  mapped_language_model.py  mapped_model.py
src/model/cython_decoder/: __init__.py  decoder_cy.pyx  decoder_cy_old.pyx  setup.py
src/test/: quick_test.py  run_complete_test.py  test_model.py  train_model.py  visualize_results.py
src/tests/: conftest.py  enron_test.py  quick_test.py  test_char_language_model.py  test_data.py  test_decoder_integration.py  test_evaluate.py  test_training_pipeline.py
test/: main_test.cpp  test_decryptor.cpp  test_gpu_accelerator.cpp  test_language_model.cpp  test_viterbi_search.cpp
test/include/: test_config_manager.h  test_decryptor.h  test_gpu_accelerator.h  test_language_model.h  test_visualizer.h  test_viterbi_search.h
test/src/: test_config_manager.cpp  test_visualizer.cpp
